:memo: Add javadoc and serve swagger file
