# temporal_time_series_ms/src/main/java/fr/pir/controller/OtherController.java
@@ -1,6 +1,9 @@
 package fr.pir.controller;
 
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -12,13 +15,29 @@ import fr.phenix333.logger.MyLogger;
 @RequestMapping
 public class OtherController {
 
-	private static final MyLogger L = MyLogger.create(OtherController.class);
+    private static final MyLogger L = MyLogger.create(OtherController.class);
 
-	@GetMapping(value = { "/", "/hello", "/api", "/api/hello" })
-	public ResponseEntity<String> helloWorld() {
-		L.function("");
+    /**
+     * Endpoint to return a simple "Hello World!" message.
+     *
+     * @return ResponseEntity<String> -> The 'Hello World!' message with HTTP
+     * status OK
+     */
+    @GetMapping({"/hello", "/api/hello"})
+    public ResponseEntity<String> helloWorld() {
+        L.function("");
 
-		return ResponseEntity.status(HttpStatus.OK).body("Hello World!");
-	}
+        return ResponseEntity.status(HttpStatus.OK).body("Hello World!");
+    }
+
+    /**
+     * Endpoint to serve the Swagger UI HTML file.
+     *
+     * @return String -> Redirects to the static swagger.html file
+     */
+    @GetMapping({"/", "/api", "/swagger", "/public"})
+    public String redirectToSwagger() {
+        return "redirect:/swagger.html";
+    }
 
 }
