# temporal_time_series_ms/src/main/resources/static/swagger.yml
@@ -14,6 +14,10 @@ tags:
     description: Hello World! for test API
   - name: Json Graph
     description: Json graph
+  - name: Logs
+    description: Logs
+  - name: Dataset
+    description: Dataset
 
 components:
   schemas:
@@ -78,35 +82,7 @@ components:
           format: double
 
 paths:
-  /:
-    get:
-      tags:
-        - Hello
-      summary: Returns a greeting message
-      operationId: helloWorld
-      responses:
-        "200":
-          description: Successful response
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: Hello World!
   /hello:
-    get:
-      tags:
-        - Hello
-      summary: Returns a greeting message
-      operationId: helloWorld
-      responses:
-        "200":
-          description: Successful response
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: Hello World!
-  /api:
     get:
       tags:
         - Hello
